# tdsp_E16

./: Dockerfile  pyproject.toml
.dvc/: config
docs/acceptance/: exit_report.md
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
docs/deployment/: Dspliegue_proyecto.ipynb  deploymentdoc.md  vectorizer.joblib
docs/modeling/: model_report.md
scripts/data_acquisition/: .gitignore  fakes1000.csv.dvc  main.py  onlyfakes1000.csv.dvc  onlytrue1000.csv.dvc
scripts/evaluation/: Modelamiento_Fake_News.ipynb
scripts/preprocessing/: Proyecto_Metodologías_Ágiles_Análisis_Exploratorio.ipynb  Proyecto_Metodologías_Ágiles_Preprocesamiento.ipynb
scripts/training/: .gitignore  Proyecto_Fake_News.ipynb  fakes1000_processed.csv.dvc
src/: main.py  railway.json
src/nombre_paquete/: main.py
