[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "noticias_fake"
version = "0.1.0"
authors = [{name = "Gloria Rincon", email = "correo@correo.com"},{name = "Claudia Cañon", email = "correo@correo.com"}]
description = "Proyesto de ML para la deteccion de noticias falsas"
requires-python = ">3.8"
dependencies = [
    "numpy"
]

[tool.setuptools.packages.find]
where = ["src/"]
